Fix warning across the project